Commit from Bungeni: Pootle Localisation Portal by user murithi.: 964 of 1051 messages translated (56 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/pt/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/pt/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 13 12:37:52 2011\n"
-"PO-Revision-Date: 2011-09-22 11:58+0300\n"
+"PO-Revision-Date: 2011-09-22 12:24+0300\n"
 "Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: pt\n"
@@ -18,9 +18,8 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 
 #: src/bungeni.main/bungeni/core/app.py:102
-#, fuzzy
 msgid "Bungeni"
-msgstr "visitante bungeni"
+msgstr "bungeni"
 
 #: src/bungeni.main/bungeni/core/app.py:103
 #: src/bungeni.main/bungeni/core/app.py:110
@@ -35,14 +34,12 @@ msgstr "área de trabalho"
 
 #: src/bungeni.main/bungeni/core/app.py:116
 #: src/bungeni.main/bungeni/core/app.py:117
-#, fuzzy
 msgid "documents"
 msgstr "documentos"
 
 #: src/bungeni.main/bungeni/core/app.py:124
-#, fuzzy
 msgid "draft"
-msgstr "reescrever agenda"
+msgstr "anteprojeto"
 
 #: src/bungeni.main/bungeni/core/app.py:125
 #, fuzzy
@@ -51,7 +48,7 @@ msgstr "documentos apresentados"
 
 #: src/bungeni.main/bungeni/core/app.py:130
 msgid "inbox"
-msgstr ""
+msgstr "caixa de entrada"
 
 #: src/bungeni.main/bungeni/core/app.py:131
 #, fuzzy
@@ -59,9 +56,8 @@ msgid "incoming documents"
 msgstr "documento apresentado"
 
 #: src/bungeni.main/bungeni/core/app.py:136
-#, fuzzy
 msgid "sent"
-msgstr "consentir"
+msgstr "enviados"
 
 #: src/bungeni.main/bungeni/core/app.py:137
 #, fuzzy
@@ -69,7 +65,6 @@ msgid "sent documents"
 msgstr "documentos apresentados"
 
 #: src/bungeni.main/bungeni/core/app.py:142
-#, fuzzy
 msgid "archive"
 msgstr "arquivo"
 
@@ -128,9 +123,8 @@ msgid "Members"
 msgstr "deputados"
 
 #: src/bungeni.main/bungeni/core/app.py:171
-#, fuzzy
 msgid "Records of members of parliament"
-msgstr "Registos dos Deputados"
+msgstr "registos dos deputados"
 
 #: src/bungeni.main/bungeni/core/app.py:174
 #: src/bungeni.main/bungeni/ui/menu.zcml:1337
@@ -149,7 +143,6 @@ msgid "Administration"
 msgstr "administração"
 
 #: src/bungeni.main/bungeni/core/app.py:187
-#, fuzzy
 msgid "Manage bungeni settings"
 msgstr "administrar configurações bungeni"
 
@@ -174,7 +167,6 @@ msgid "Bills"
 msgstr "iniciativas"
 
 #: src/bungeni.main/bungeni/core/app.py:211
-#, fuzzy
 msgid "View bills introduced in the current parliament"
 msgstr "visualizar projectos de lei apresentados pelo parlamento atual"
 
@@ -190,7 +182,6 @@ msgid "Questions"
 msgstr "Perguntas"
 
 #: src/bungeni.main/bungeni/core/app.py:217
-#, fuzzy
 msgid "View questions tabled in the current parliament"
 msgstr "vizualizar as perguntas emitidas pelo parlamento atual"
 
@@ -206,7 +197,6 @@ msgid "Motions"
 msgstr "moções"
 
 #: src/bungeni.main/bungeni/core/app.py:223
-#, fuzzy
 msgid "View motions moved in the current parliament"
 msgstr "visualizar moções apresentadas pelo parlamento"
 
@@ -221,9 +211,8 @@ msgid "Tabled documents"
 msgstr "documentos agendados"
 
 #: src/bungeni.main/bungeni/core/app.py:231
-#, fuzzy
 msgid "View the documents tabled in the current parliament"
-msgstr "agendamentos do dia"
+msgstr "visualizar documentos apresentadas pelo parlamento atual"
 
 #: src/bungeni.main/bungeni/core/app.py:236
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2286
@@ -250,7 +239,7 @@ msgstr "publicações"
 
 #: src/bungeni.main/bungeni/core/app.py:257
 msgid "browse and download parliamentary publications"
-msgstr ""
+msgstr "navegar e baixar as publicações parlamentares"
 
 #: src/bungeni.main/bungeni/core/app.py:264
 msgid "Current"
@@ -269,9 +258,8 @@ msgid "View current political groups"
 msgstr "visualizar grupos parlamentares actuais"
 
 #: src/bungeni.main/bungeni/core/app.py:276
-#, fuzzy
 msgid "Browse archives"
-msgstr "meu arquivo"
+msgstr "navegue arquivos"
 
 #: src/bungeni.main/bungeni/core/app.py:277
 msgid "Browse records from the archive"
@@ -310,7 +298,6 @@ msgid "email settings"
 msgstr "definições de correio electrónico"
 
 #: src/bungeni.main/bungeni/core/app.py:349
-#, fuzzy
 msgid "manage email settings"
 msgstr "definições de correio electrónico"
 
@@ -585,9 +572,8 @@ msgstr "adiamento da primeira leitura"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:183
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:53
-#, fuzzy
 msgid "Submit Bill to Select Committee (I)"
-msgstr "Enviar à comissão (I)"
+msgstr "enviar à comissão (I)"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:186
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:46
@@ -660,15 +646,13 @@ msgstr "Adiar Comissão Plenária"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:225
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:33
-#, fuzzy
 msgid "Submit Bill to Select Committee (II)"
-msgstr "Enviar à comissão (II)"
+msgstr "enviar à comissão (II)"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:228
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:40
-#, fuzzy
 msgid "Submit/Resubmit Bill to Select Committee (II)"
-msgstr "Enviar/re-enviar à Comissão"
+msgstr "enviar/re-enviar à comissão (II)"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:231
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:34
@@ -1005,9 +989,8 @@ msgid "reject"
 msgstr "rejeitar"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:667
-#, fuzzy
 msgid "withdraw"
-msgstr "Retirar"
+msgstr "retirar"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:67
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:384
@@ -1021,9 +1004,8 @@ msgid "Complete"
 msgstr "completar"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:670
-#, fuzzy
 msgid "withdrawauto"
-msgstr "Retirar"
+msgstr "retirar"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:673
 #, fuzzy
@@ -1142,7 +1124,6 @@ msgid "Schedule"
 msgstr "agendar"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:10
-#, fuzzy
 msgid "Submitted to Clerk"
 msgstr "apresentado ao Secretário-Geral"
 
@@ -1370,9 +1351,8 @@ msgid "Private"
 msgstr "privado"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:26
-#, fuzzy
 msgid "received by clerk"
-msgstr "Recebido pelo Secretário Geral"
+msgstr "recebido pelo Secretário Geral"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:27
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:106
@@ -1472,9 +1452,8 @@ msgid "Published internal"
 msgstr "publicar internamente"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:415
-#, fuzzy
 msgid "Public event"
-msgstr "público"
+msgstr "evento público"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:425
 msgid "Published"
@@ -2093,27 +2072,22 @@ msgid "View comments"
 msgstr "visualizar comentários"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:253
-#, fuzzy
 msgid "Add a signatory"
 msgstr "adicionar signatário"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:254
-#, fuzzy
 msgid "Consent or reject signature request"
 msgstr "consentir ou rejeitar"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:255
-#, fuzzy
 msgid "Delete a signatory"
 msgstr "apagar signatário"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:256
-#, fuzzy
 msgid "Edit a signatory"
 msgstr "editar signatário"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:257
-#, fuzzy
 msgid "View a signatory"
 msgstr "visualizar signatário"
 
@@ -2378,7 +2352,6 @@ msgid "Document Signatory"
 msgstr "signatário do documento"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:22
-#, fuzzy
 msgid "Party Member"
 msgstr "membro do partido"
 
@@ -2388,9 +2361,8 @@ msgid "Member of Government"
 msgstr "deputado"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:24
-#, fuzzy
 msgid "Committee Member"
-msgstr "adicionar membro da comissão ..."
+msgstr "membro da comissão"
 
 #: src/bungeni.main/bungeni/ui/attendance.py:142
 #: src/bungeni.main/bungeni/ui/forms/common.py:360
@@ -5319,7 +5291,6 @@ msgid "item type"
 msgstr "tipos de título"
 
 #: src/bungeni.main/bungeni/ui/workspace.py:39
-#, fuzzy
 msgid "status date"
 msgstr "data de status"
 
