Updates to documentation to reflect new paths ; Added note about folder structure and what folders contain

--- a/wiki/Install_Bungeni_Fabric.wiki
+++ b/wiki/Install_Bungeni_Fabric.wiki
@@ -46,7 +46,7 @@ See also [http://code.google.com/p/bungeni-portal/wiki/HowTo_SetupFabricScripts#
 At the end of this step your folder structure should look like this :
 
 {{{
-./cinst
+./bungeni_apps
 |-- bungeni
 |   |-- bin
 |   |-- buildconf
