--- a/wiki/Install_Final_Folder_Structure.wiki
+++ b/wiki/Install_Final_Folder_Structure.wiki
@@ -5,32 +5,25 @@
 =Bungeni Installation Folder Structure=
 
 {{{
-./cinst
-|-- bungeni
-|   |-- bin
-|   |-- buildconf
-|   |-- cache
-|   |-- data
-|   |-- develop-eggs
-|   |-- eggs
-|   |-- locales
-|   |-- logs
-|   |-- parts
-|   |-- patch
-|   |-- plone
-|   |-- portal
-|   |-- src
-|   |-- templates
-|   `-- testdatadmp
-|-- config
-|-- logs
-|-- pid
-|-- python24
-|   |-- bin
-|   |-- include
-|   |-- lib
-|   `-- man
-`-- python25
+./bungeni_apps		# Contains the complete installation
+|-- bungeni		# Contains the bungeni installation	
+|   |-- bin		# Executable command line tools for bungeni
+|   |-- cache		# For use by chameleon caching engine
+|   |-- data		# Contains database setup scripts
+|   |-- develop-eggs	# Contains python eggs deployed by buildout
+|   |-- eggs		# Contains downloaded python eggs from the package server
+|   |-- locales		# Custom locales used in bungeni
+|   |-- logs		# Postgres Log (redundant)
+|   |-- parts		# Contains postgresql, xapian indexes, xml_db output folder
+|   |-- plone		# Contains the Plone installation
+|   |-- portal		# Contains the Portal installation
+|   |-- src		# This is the source code packages checked out by the buildout
+|   |-- templates	# Documentation templates and scripts for the workflow documentation
+|   `-- testdatadmp	# database dump with demo data + setup minimal metadata
+|-- config		# contains supervisord.conf Supervisor process monitor config file
+|-- logs		# All application logs
+|-- pid			# process id files
+`-- python26		# Python installation used by bungeni, plone, portal
     |-- bin
     |-- include
     |-- lib
