Some addition and refinement to the content of DevProgrammingGuide.

--- a/wiki/DevProgammingGuide.wiki
+++ b/wiki/DevProgammingGuide.wiki
@@ -6,7 +6,7 @@
 
 Rules, conventions, guidelines for programming bungeni, to increase consistency, efficiency and maintainability of the bungeni code base. 
 
-These rules are primarily concerned about design, architecture, adoption of selected "best practices". Souce code style guidelines are addressed in a separate document [DecCodeStyleGuide Bungeni Source Code Style Guide].
+These rules are primarily concerned about design, architecture, adoption of selected "best practices". Souce code style guidelines are addressed in a separate document [DevCodeStyleGuide Bungeni Source Code Style Guide].
 
 ----
 
@@ -15,12 +15,17 @@ These rules are primarily concerned about design, architecture, adoption of sele
  * The bungeni python package is not a namespace package.
 
 
+----
 == Security ==
 
 How roles and permissions should be defined and assigned: 
 a "programming security policy" that should be considered as an integral part of 
 the system design, and must be considered for, and may affect, any other design 
 choices to be made on an ongoing basis as the system evolves. 
+
+=== General ===
+
+ * Bungeni categorically grants/denies permissions only to *roles* i.e. never directly to a principal (or group). And, to reduce runtime overhead, the BungeniSecurityPolicy actually does not perform the check for any direct permission grants on principals and groups.
 
 
 === Security definitions (roles, permissions, grants) ===
@@ -41,9 +46,11 @@ bungeni_custom/sys/acl/meta/...
 bungeni_custom/sys/acl/content/...
 }}}
 
- * A premise of Zope 3 security is that all access to an object is denied unless a permission is first granted. Bungeni should adopt a similar approach i.e. should not favour global grants to then deny as needed downstream, but prefer the general practice of simply granting as needed.
+ * A premise of Zope 3 security is that all access to an object is denied unless a permission is first granted. Bungeni should adopt a similar approach i.e. should not favour global grants to then deny as needed downstream, but, whenever possible, to prefer the general practice of simply granting only when and as needed.
  * For simplicity, all `bungeni.TYPE.View` permissions should always be redefined to `zope.View`, and this used generically thoughout.
- 
+
+
+
 !+type-dependent permissions should be defined/granted along with type definitions themselves
 
 !+most of `sys/acl/...` should not be there; question.zcml is already "orphan code"; why both `/meta` and `/content` sub-folders?
@@ -56,37 +63,36 @@ Some reflection as to support for:
  # system-owned types (may or may not be workflowed) with dedicated permissions, that are exposed "within limits" to some user customization
  # or, system-owned types that are NOT at all exposed to user customization (completely internal to bungeni)
  # support for user-defined roles, and for assigning permissions to them...
- # should UI views have make use of same permissions as model-bound views?
+ # UI views (typically require globally granted permissions) should use dedicated permissions, and so different than any related model-bound permissions.
 
-=== Permission *spaces* ===
+=== Distinct permission _scopes_ ===
 
-For clarity of intention, permission "scopes" should be kept as distinct as possible. Notably, the spaces implied by `bungeni.Authenticated` and those implied by other "custom" roles (all of which imply `bungeni.Authenticated`) are overlapping. 
+For clarity of intention, permission _scopes_ should be kept as distinct as possible. Notably, the "permission scope spaces" implied by `bungeni.Authenticated` and those implied by other "custom" roles (all of which imply `bungeni.Authenticated`) overlap. Grants to roles from these two sets should not be mixed, as:
 
- * Debugging permission checking is made unnecessarily more difficult; indeed undestanding what a permission setting should be by reading the code becomes virtually impossible. 
+ * Debugging permission checking is made unnecessarily more difficult; indeed undestanding what a permission setting should be by reading the code becomes virtually impossible.
  * It just invites for developer inconsistency.
- * It results in incorrect decisions in some cases e.g. a change record on on attahcment owned by a document may result in being granted Visibility to a member virtue of Authenticated having zope.View (globally or locally on the head instance). 
+ * This inconsistency will result in incorrect decisions in some cases e.g. View on a change record of an attachment to a a document may be granted to a member virtue of Authenticated having zope.View (be it globally or locally on the attachment instance or on any other ancestor instance).
 
-I propose adoption of a constraint to mever mix applying permissions... where
-what not to mix would be similar to what has been implemented for workflow 
-permission assignments (from r8919 on).
+I propose adoption of the following policy to keep permission determination as simple as possible, to never mix applying permissions in this way (where what is to be not mixed would be similar, if more stringent, to what has been implemented for workflow permission assignments, from r8919 on):
 
-Summary of such a policy would be to adopt that for any given specific 
-permission, the "scope" for that permission is either limited to 
-`bungeni.Authenticated` OR ONLY to the set of other custom roles.
-I.e. if we consider two mutually exclusive sets of roles:
-{{{
-A: bungeni.Authenticated
-B: bungeni.Clerk bungeni.Speaker bungeni.Owner bungeni.Signatory bungeni.MP bungeni.Minister
-}}}
-then the "permission space" we can "assign" in would be:
-{{{
-{(permission, object), role, setting)}
-}}}
-where, for any (permission, object) pair, if a role from A is assigned ANYWHERE 
-in the application, then no role from B may be assigned ANYWHERE throughout the 
-application. Or vice-versa, obviously. 
-NOTE: a global grant/deny would be implied when object=None.
-
+    For a given specific permission, the "scope" for that permission is either limited to 
+    `bungeni.Authenticated` OR ONLY to the set of other custom roles.
+    I.e. if we consider two mutually exclusive sets of roles:
+    {{{
+    A: bungeni.Authenticated
+    B: bungeni.Clerk bungeni.Speaker bungeni.Owner bungeni.Signatory bungeni.MP bungeni.Minister
+    }}}
+    then the "permission space" we can "assign" in would be:
+    {{{
+    {(permission, object), role, setting)}
+    }}}
+    where, for any (permission, object) pair, assignments (irrepective of setting) of the permission 
+    may only be to roles *only* within _either_ A _or_ B *anywhere* in the application.
+    Further, if a permission is assigned globally (here, object=None would mean global) 
+    then it _should_ not ever be assigned locally.
+    
+    I.e. assignments of a given permission must *always be to only one* of 
+    the following 4 combinations: `{global, local} x {A, B}`
 
 
 === Security requirement statements ===
@@ -101,7 +107,7 @@ bungeni.main/bungeni/ui/configure.zcml
 
 !+identify a simple practice for this
 
-
+----
 == Templates ==
 
  * Templates should be as dumb as possible, concerning themselves with purely presentational logic; templates should need to have *no* "business" knowledge of data received for rendering.
